--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>This is an example webpage</h1>
+        <div id="header">
+            <h1 style="left: 20vw; position: relative;">thatDingus</h1>
+            <h1 style="right: 20vw; position: relative; float: right; opacity: 10%; cursor: default;">[home]</h1>
+        </div>
+        <div id="nav">
+            <a style="left: 20vw; position: relative;" href="index.html">[home]</a>
+            <a style="left: 20vw; position: relative;" href="blog.html">[blog]</a>
+            <a style="left: 20vw; position: relative;" href="contact.html">[contact]</a>
+        </div>
+        <div id="content">
+        </div>
+        <div id="main-content">
+        </div>
+        <div id="footer">
+        </div>
     </body>
 </html>
