--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>thatDingus</title>
+        <title>Home \\ thatDingus</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -12,10 +12,14 @@
         </div>
         <div id="nav">
             <a style="left: 20vw; position: relative;" href="index.html">[home]</a>
+            <a style="left: 20vw; position: relative;" href="music.html">[music]</a>
             <a style="left: 20vw; position: relative;" href="blog.html">[blog]</a>
             <a style="left: 20vw; position: relative;" href="contact.html">[contact]</a>
         </div>
-        <div id="content">
+        <div id="content-header">
+            <h1 class="left-title">This is a title that is on the left</h1>
+            <h1 class="right-title">This is a title that is on the right</h1>
+            <p class="paragraph">This is a paragraph</p>
         </div>
         <div id="main-content">
         </div>
