--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Home \\ thatDingus</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="favicon.png">
     </head>
     <body>
         <div id="header">
