Safari favicon testing #1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Home \\ thatDingus</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.png">
+        <link rel="apple-touch-icon-precomposed" href="favicon.png">
     </head>
     <body>
         <div id="header">
