Small bug fixes

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.png">
         <link rel="apple-touch-icon-precomposed" href="favicon.png">
+        <link rel="apple-icon-precomposed" href="favicon.png">
     </head>
     <body>
         <div id="header">
             <h1 style="left: 20vw; position: relative;">thatDingus</h1>
-            <h1 style="right: 1vw;position: relative; float: right; opacity: 10%; cursor: default;">[home]</h1>
+            <h1 style="right: 1vw;position: relative; float: right; opacity: 50%; cursor: default;">[home]</h1>
         </div>
         <div id="nav">
             <a style="left: 1vw; position: relative;" href="index.html">[home]</a>
