--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 
 <html>
     <head>
-        <title>Home \\ thatDingus</title>
+        <title>home \\ thatDingus</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.png">
         <link rel="apple-touch-icon-precomposed" href="favicon.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
         <div id="header">
-            <h1 style="left: 20vw; position: relative;">thatDingus</h1>
+            <h1 class="animate__animated animate__flip" style="left: 20vw; position: relative;">thatDingus</h1>
             <h1 style="right: 1vw;position: relative; float: right; opacity: 50%; cursor: default;">[home]</h1>
         </div>
         <div id="nav">
