Touchups and animatio
Also added a experimental 404 page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     </head>
     <body>
         <div id="header">
-            <h1 class="animate__animated animate__flip" style="left: 20vw; position: relative;">thatDingus</h1>
+            <h1 class="animate__animated animate__pulse" style="left: 20vw; position: relative;">thatDingus</h1>
             <h1 style="right: 1vw;position: relative; float: right; opacity: 50%; cursor: default;">[home]</h1>
         </div>
         <div id="nav">
-            <a style="left: 1vw; position: relative;" href="index.html">[home]</a>
-            <a style="left: 1vw; position: relative;" href="music.html">[music]</a>
-            <a style="left: 1vw; position: relative;" href="blog.html">[blog]</a>
-            <a style="left: 1vw; position: relative;" href="contact.html">[contact]</a>
+            <a id="nav-button" style="left: 1vw; position: relative;" href="index.html">[home]</a>
+            <a id="nav-button" style="left: 1vw; position: relative;" href="music.html">[music]</a>
+            <a id="nav-button" style="left: 1vw; position: relative;" href="blog.html">[blog]</a>
+            <a id="nav-button" style="left: 1vw; position: relative;" href="contact.html">[contact]</a>
         </div>
         <div class="featured-section-titler">
             <h1 class="middle-title">Featured</h1>
