Starting to work on this again
Just cleaning things up

--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
         <div style="width: 100vw;" id="content">
             <div style="width: 100vw;" class="transform-center">
                 <div class="animate__animated disp" id="greeter-page-1">
-                    <h1 onclick="redirect('https://soundcloud.com/thatdingus')" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MY MUSIC</h1>
+                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MY MUSIC</h1>
                     <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">YOUTUBE VIDEOS</h1>
-                    <h1 onclick="pagedown()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
+                    <h1 onclick="pagedown()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
                 </div>
              </div>
              <div style="width: 100vw" class="transform-center">
                 <div class="animate__animated nodisp" id="greeter-page-2">
-                    <h1 onclick="pageup()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
+                    <h1 onclick="pageup()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
                     <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">STUFF</h1>
                     <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MORE STUFF</h1>
-                    <h1 onclick="pagedown()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
+                    <h1 onclick="pagedown()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
                 </div>
              </div>
              <div style="width: 100vw" class="transform-center">
                 <div class="animate__animated nodisp" id="greeter-page-3">
-                    <h1 onclick="pageup()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
+                    <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
                     <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">STUFF</h1>
                     <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MORE STUFF</h1>
                 </div>
+             </div>
+             <div id="footer">
+                 <p>view on github</p>
              </div>
         </div>
     </body>
