--- a/index.html
+++ b/index.html
@@ -3,36 +3,37 @@
         <title>patrickCraig</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/37d9ae9b4b.js" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="hover.js"></script>
     </head>
-    <body>
-        <div style="width: 100vw;" id="content">
-            <div style="width: 100vw;" class="transform-center">
-                <div class="animate__animated disp" id="greeter-page-1">
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MY MUSIC</h1>
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">YOUTUBE VIDEOS</h1>
-                    <h1 onclick="pagedown()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
-                </div>
-             </div>
-             <div style="width: 100vw" class="transform-center">
-                <div class="animate__animated nodisp" id="greeter-page-2">
-                    <h1 onclick="pageup()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">STUFF</h1>
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MORE STUFF</h1>
-                    <h1 onclick="pagedown()" class="hover-mouse redirector arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-down"></i></h1>
-                </div>
-             </div>
-             <div style="width: 100vw" class="transform-center">
-                <div class="animate__animated nodisp" id="greeter-page-3">
-                    <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;"><i class="fas fa-angle-up"></i></h1>
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">STUFF</h1>
-                    <h1 onclick="redirect()" class="hover-mouse redirector" style="font-family: Holtwood One SC; color: F0BCD4; font-size: 5vw; text-align: center;">MORE STUFF</h1>
-                </div>
-             </div>
-             <div id="footer">
-                 <p>view on github</p>
-             </div>
+    <body id="content">
+        <div style="width: 100vw;"  class="container-sm">
+            <div class="animate__animated d-sm-flex flex-column justify-content-center h-100" id="greeter-page-1">
+                <h1 class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">Lorem ipsum</h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">Dolor sit amet</h1>
+                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
+            </div>
+        </div>
+        <div style="width: 100vw;"  class="container-sm">
+            <div class="animate__animated nodisp flex-column justify-content-center h-100" id="greeter-page-2">
+                <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">MY jiujsiuhj</h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">YOUTUBE VIDEOS</h1>
+                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
+            </div>
+        </div>
+        <div style="width: 100vw;"  class="container-sm">
+            <div class="animate__animated nodisp flex-column justify-content-center h-100" id="greeter-page-3">
+                <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">MY jiujsiuhj</h1>
+                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">YOUTUBE VIDEOS</h1>
+                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
+            </div>
+        </div>
+        <div class="footer">
+            <a style="text-decoration: none; font-size: 1rem; color: da4167;" target="blank" href="https://github.com/thatDingus/thatDingus.github.io"><b class="animate__animated animate__rubberBand m-0">View on GitHub <i class="fa-solid fa-code"></i></v></a>
         </div>
     </body>
 </html>
