--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <html>
     <head>
         <title>patrickCraig</title>
+
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <script src="https://kit.fontawesome.com/37d9ae9b4b.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <script src="hover.js"></script>
+
+        <script src="https://kit.fontawesome.com/37d9ae9b4b.js" crossorigin="anonymous"></script>
     </head>
     <body id="content">
-        <div style="width: 100vw;"  class="container-sm">
-            <div class="animate__animated d-sm-flex flex-column justify-content-center h-100" id="greeter-page-1">
-                <h1 class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
+        <div class="container-sm d-flex flex-column h-100 justify-content-center overflow-scroll">
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+            <h1 class="display-1 item text-center">Hello</h1>
+
+            <!-- <div class="d-sm-flex flex-column align-items-center justify-content-center h-100" id="greeter-page-1">
                 <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">Lorem ipsum</h1>
                 <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">Dolor sit amet</h1>
-                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
             </div>
+             -->
         </div>
-        <div style="width: 100vw;"  class="container-sm">
-            <div class="animate__animated nodisp flex-column justify-content-center h-100" id="greeter-page-2">
-                <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
-                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">MY jiujsiuhj</h1>
-                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">YOUTUBE VIDEOS</h1>
-                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
-            </div>
-        </div>
-        <div style="width: 100vw;"  class="container-sm">
-            <div class="animate__animated nodisp flex-column justify-content-center h-100" id="greeter-page-3">
-                <h1 onclick="pageup()" class="hover-mouse arrow" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fa-solid fa-angle-up"></i></h1>
-                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">MY jiujsiuhj</h1>
-                <h1 class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;">YOUTUBE VIDEOS</h1>
-                <h1 onclick="pagedown()" class="hover-mouse" style="font-family: Holtwood One SC; color: F0BCD4; text-align: center;"><i class="fas fa-angle-down"></i></h1>
-            </div>
-        </div>
+        <div class="vignette1"></div>
+        <div class="vignette2"></div>
         <div class="footer">
             <a style="text-decoration: none; font-size: 1rem; color: da4167;" target="blank" href="https://github.com/thatDingus/thatDingus.github.io"><b class="animate__animated animate__rubberBand m-0">View on GitHub <i class="fa-solid fa-code"></i></v></a>
         </div>
