--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://kit.fontawesome.com/37d9ae9b4b.js" crossorigin="anonymous"></script>
     </head>
     <body id="content">
-        <div class="container-sm d-flex flex-column h-100 justify-content-center overflow-scroll">
+        <div class="container-md d-flex flex-column h-100 justify-content-center overflow-scroll">
             <h1 class="display-1 item text-center">Hello</h1>
             <h1 class="display-1 item text-center">Hello</h1>
             <h1 class="display-1 item text-center">Hello</h1>
