--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        <script src="https://kit.fontawesome.com/37d9ae9b4b.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="container-fluid bg-white p-3"> 
@@ -27,6 +30,12 @@
                         <li class="nav-item">
                             <a href="#contact" data-bs-toggle="tab" class="nav-link text-black">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="#videos" data-bs-toggle="tab" class="nav-link text-black">Videos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#music" data-bs-toggle="tab" class="nav-link text-black">Music</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
@@ -34,16 +43,78 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container h-100">
             <div class="tab-content">
-                <div class="tab-pane active p-3" id="home">
-                    <h1 class="display-3 text-center">this is patrickCraig</h1>
+                <div class="tab-pane active" id="home">
+                    <div>
+                        <h1 class="h-100 text-center"><< ppaattrriicckkccrraaiigg >></h1>
+                        <h3 class="h-3 text-center text-black-50">A personal website you will probably forget about</h2>
+                    </div>   
+                    <hr>
+                    <div>
+                        <h1 class="h-100">Latest post:</h1>
+                    </div>
+                    
                 </div>
                 <div class="tab-pane" id="blog">
-                    <h3>Gallery!</h3>
+                    <div>
+                        <h1 class="h-100 text-center"><< blog >></h1>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm">
+                                <h1>Test blog post #2</h1>
+                            </div>
+                            <div class="col-sm">
+                                <h3 style="text-align: right;" class="text-black-50">6/9/2022</h3>
+                            </div>
+                        </div>
+                        <p>Welcome to my blog!</p>
+                        <p>Hello this is a anothet test text</p>
+                        <hr>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm">
+                                <h1>Test blog post #1</h1>
+                            </div>
+                            <div class="col-sm">
+                                <h3 style="text-align: right;" class="text-black-50">6/9/2022</h3>
+                            </div>
+                        </div>
+                        <p>Welcome to my blog!</p>
+                        <p>Hello this is a test text</p>
+                        <hr>
+                    </div>
                 </div>
                 <div class="tab-pane" id="contact">
                     <h3>Contact!</h3>
+                </div>
+                <div class="tab-pane" id="videos">
+                    <h3>Contact!</h3>
+                </div>
+                <div class="tab-pane" id="music">
+                    <h3>Contact!</h3>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-light h-auto">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm p-2">
+                        <h3>Special Thanks</h1>
+                        <a href="https://getbootstrap.com" target="_blank"><p class=""><i class="fa-brands fa-bootstrap"></i> Bootstrap</p></a>
+                        <a href="https://animate.style" target="_blank"><p class=""><i class="fa-solid fa-bolt-lightning"></i> Animate.css</p></a>
+                        <a href="https://fontawesome.com" target="_blank"><p class=""><i class="fa-solid fa-font-awesome"></i> Font Awesome</p></a>
+                    </div>
+                    <div class="col-sm bg-opacity-25 bg-black p-2">
+                    </div>
+                    <div class="col-sm p-2">
+                    </div>
+                    <div class="col-sm bg-opacity-25 bg-black p-2">
+                    </div>
+                    <div class="col-sm p-2">
+                    </div>
                 </div>
             </div>
         </div>
